--- a/home.html
+++ b/home.html
@@ -16,12 +16,14 @@
 	  	</div>
 
 	  	<div class="grid">
-		  	<div class="rice-box">
-		  		<a href="rice.html"><h3>Rice University</h3></a>
-		  		<br>
-		  		<a href="rice.html">B.S. in CS, 2019</a>
-		  		<!-- Link to classes taken, rice activities -->
-		  	</div>
+
+		  	<a class="block-link" href="rice.html">
+		  		<div class="rice-box">
+			  		<h3 class="hover-underline">Rice University</h3>
+			  		<br>
+			  		B.S. in CS, 2019
+		  		</div>
+		  	</a>
 
 		  	<div class="evernote-box">
 		  		<h3>Evernote</h3>
@@ -34,23 +36,29 @@
 		  		<!-- Link to page describing what I did -->
 		  	</div>	  	
 
+		  	<a class="block-link" href="https://www.strava.com/athletes/7786466/training/log?feature=public-training-log">
 		  	<div class="runner-box">
-		  		<a href="https://www.strava.com/athletes/7786466/training/log"><h3>Runner</h3></a>
+		  		<h3 class="hover-underline">Runner</h3>
 		  		<br>
-		  		<a href="https://www.strava.com/activities/833119543"><u>Marathons</u></a> and halves
+		  		Marathons and halves
 		  	</div>	  	
+		  	</a>
 
-		  	<div class="coder-box">
-		  		<a href="https://www.github.com/caiismyname"><h3>Coder</h3></a>
-		  		<br>
-		  		Four <a href="https://devpost.com/caiismyname?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><u>hackathons</u></a> and counting
-		  	</div>
+		  	<a class="block-link" href="https://www.github.com/caiismyname">
+			  	<div class="coder-box">
+			  		<h3 class="hover-underline">Coder</h3>
+			  		<br>
+			  		Four hackathons and counting
+			  	</div>
+		  	</a>
 
-		  	<div class="reader-box">
-		  		<a href="http://sharedli.st/caiismyname"><h3>Reader</h3></a>
-		  		<br>
-		  		Too many tech blogs to count
-		  	</div>	  	
+		  	<a class="block-link" href="http://sharedli.st/caiismyname">
+			  	<div class="reader-box">
+			  		<h3 class="hover-underline">Reader</h3>
+			  		<br>
+			  		Too many tech blogs to count
+			  	</div>	  	
+		  	</a>
 
 			<div class="grid-box">
 				<h3>Contact</h3>
@@ -63,13 +71,15 @@
 			<div class="grid-box">
 				<h3>Links</h3>
 				<br>
-				<a href="/David%Cai%Resume.pdf"><u>Resume</u></a>
+				<a href="./David_Cai_Resume.pdf"><u>Resume</u></a>
 				<br>
 				<a href="https://www.github.com/caiismyname"><u>Github</u></a>
 				<br>
 				<a href="https://devpost.com/caiismyname?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><u>Devpost</u></a>
 				<br>
-				<a href="https://www.strava.com/athletes/7786466/training/log"><u>Strava</u></a>
+				<a href="https://www.strava.com/athletes/7786466/training/log?feature=public-training-log"><u>Strava</u></a>
+				<br>
+				<a href="https://www.evernote.com/l/AQA0BEctqHlNhbPplmLmpSE9nvPKih-pi3A"><u>Training Plan</u></a>
 
 			</div>
 		</div>
