--- a/rice.html
+++ b/rice.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>David Cai: Rice University</title>
+    <title>David Cai - Rice University</title>
     <link rel="stylesheet" href="rice.css">
   </head>
   <body>
@@ -10,8 +10,8 @@
   <div class="container">
   
   	<div class="header">
-  		<h1>Education: Rice University</h1>
-  		<p>B.S. in Computer Science, 2019  |  GPA: 3.87</p>
+  		<h1><a href="home.html">David Cai:</a> Education</h1>
+  		<p>Rice University | B.S. in Computer Science, 2019  |  GPA: 3.87</p>
   	</div>
 
   	<div class="grid">
@@ -31,9 +31,10 @@
   			<h3>Work Experience</h3>
   			<ul>
   				<li>Rice IT Helpdesk, Student Computing Consultant (Promoted to lead Fall 2017)</li>
-  				<li>Doerr Institute for New Leaders, Web Developer</li>
+  				<li><a href="http://doerr.rice.edu">Doerr Institute for New Leaders, Web Developer</a></li>
   				<li>Intro. to Program Design, Teaching Assistant (Fall 2017)</li>
-  				<li>Will Rice College, Webmaster </li>
+  				<li><a href="http://www.willrice.org">Will Rice College, Webmaster</a></li>
+          <li>Will Rice College, Associate Justice</li>
   				<li>Will Rice College, Bike Team Captain</li>
   			</ul>
   		</div>
