Added description about Evernote, cleaned up Rice/Evernote css

--- a/home.html
+++ b/home.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" href="home.css">
   </head>
 
-
-  
-
   <body>
   	<div class="container">
 	  	<div class="header">
@@ -25,30 +22,31 @@
 		  		</div>
 		  	</a>
 
-		  	<div class="evernote-box">
-		  		<h3>Evernote</h3>
-		  		<br>
-		  		SWE Intern, 
-		  		<br>
-		  		Summer 2017,
-		  		<br>
-		  		Growth Experiments Team
-		  		<!-- Link to page describing what I did -->
-		  	</div>	  	
+		  	<a class="block-link" href="evernote.html">
+			  	<div class="evernote-box">
+			  		<h3 class="hover-underline">Evernote</h3>
+			  		<br>
+			  		SWE Intern, 
+			  		<br>
+			  		Summer 2017,
+			  		<br>
+			  		Growth Experiments Team
+			  	</div>	  	
+		  	</a>
 
 		  	<a class="block-link" href="https://www.strava.com/athletes/7786466/training/log?feature=public-training-log">
-		  	<div class="runner-box">
-		  		<h3 class="hover-underline">Runner</h3>
-		  		<br>
-		  		Marathons and halves
-		  	</div>	  	
+			  	<div class="runner-box">
+			  		<h3 class="hover-underline">Runner</h3>
+			  		<br>
+			  		Marathons and halves
+			  	</div>	  	
 		  	</a>
 
 		  	<a class="block-link" href="https://www.github.com/caiismyname">
 			  	<div class="coder-box">
 			  		<h3 class="hover-underline">Coder</h3>
 			  		<br>
-			  		Four hackathons and counting
+			  		Five hackathons and counting
 			  	</div>
 		  	</a>
 
@@ -85,7 +83,7 @@
 		</div>
 
 		<div class="footer">
-		Made from scratch with HTML/CSS. Last updated July 2017.
+		Made from scratch with HTML/CSS. Last updated August 2017.
 		</div>
 
   	</div>
