--- a/rice.html
+++ b/rice.html
@@ -14,42 +14,48 @@
   		<p>Rice University | B.S. in Computer Science, 2019  |  GPA: 3.87</p>
   	</div>
 
-  	<div class="grid">
-  		<div class="grid-box">
-  			<h3>Relevant Coursework</h3>
-  			<ul>
-  				<li>Intro. to Computer Systems</li>
-  				<li>Principles of Parallel Programming</li> 
-  				<li>Intro. to Program Design</li> 
-  				<li>Intro. to Computer Engineering</li> 
-  				<li>Algorithmic Thinking</li> 
-  				<li>Intro. to Engineering Design</li>
-  			</ul>
-  		</div>
+    <div>
+  		<h3>Relevant Coursework</h3>
+        <div class="info-paragraph">
+          <p style="font-weight: bold;"> Junior Year (In progress)</p>
+      		<ul>
+            <li>Advanced Object Oriented Design</li>
+            <li>Data Science, Tools and Models</li>
+            <li>Compiler Construction</li>
+            <li>Introduction to Computer Networks</li>
+           </ul>
+           <p style="font-weight: bold;"> Sophomore Year</p>
+           <ul> 
+      			<li>Introduction to Computer Systems</li>
+      			<li>Principles of Parallel Programming</li> 
+      			<li>Introduction to Program Design</li> 
+          </ul>
+          <p style="font-weight: bold;"> Freshman Year</p>
+          <ul>
+      			<li>Introduction to Computer Engineering</li> 
+      			<li>Algorithmic Thinking</li> 
+      			<li>Introduction to Engineering Design</li>
+      		</ul>
+        </div>
 
-  		<div class="grid-box">
-  			<h3>Work Experience</h3>
-  			<ul>
-  				<li>Rice IT Helpdesk, Student Computing Consultant (Promoted to lead Fall 2017)</li>
-  				<li><a href="http://doerr.rice.edu">Doerr Institute for New Leaders, Web Developer</a></li>
-  				<li>Intro. to Program Design, Teaching Assistant (Fall 2017)</li>
-  				<li><a href="http://www.willrice.org">Will Rice College, Webmaster</a></li>
-          <li>Will Rice College, Associate Justice</li>
-  				<li>Will Rice College, Bike Team Captain</li>
-  			</ul>
-  		</div>
+  		<h3>Work Experience</h3>
+  		<ul>
+  			<li>Rice IT Helpdesk, Lead Student Computing Consultant</li>
+  			<li><a href="http://doerr.rice.edu">Doerr Institute for New Leaders, Web Developer</a></li>
+  			<li>Intro. to Program Design, Teaching Assistant (Fall 2017)</li>
+  			<li><a href="https://github.com/caiismyname/WRC-Website">Will Rice College, Webmaster</a></li>
+        <li>Will Rice College, Associate Justice</li>
+  			<li>Will Rice College, Bike Team Captain</li>
+  		</ul>
 
-  		<div class="grid-box">
-  			<h3>For Rice Alums</h3>
-  			<ul>
-  				<li>College: Will Rice</li>
-  				<li>Baker 13: No</li>
-  				<li>Wrong way through Sallyport: 0 times</li>
-  				<li>WRWS</li>
-  			</ul>
-  		</div>
-  	</div>
-
+  		<h3>For Rice Alums</h3>
+  		<ul>
+  			<li>College: Will Rice</li>
+  			<li>Baker 13: No</li>
+  			<li>Wrong way through Sallyport: 0 times</li>
+  			<li>WRWS</li>
+  		</ul>
+    </div>
   </div>
 
   </body>
