redirect index to home

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>This is the index page</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; URL='http://davidcai.me/home.html'" />
+    <title>David Cai</title>
+    <link rel="stylesheet" href="home.css">
+  </head>
+
+  <body>
+  <h1> davidcai.me Index </h1>
+
+  </body>
+</html>
+
+
