edited index page to remove unnecesary code

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="0; URL='http://davidcai.me/home.html'" />
     <title>David Cai</title>
-    <link rel="stylesheet" href="home.css">
   </head>
 
   <body>
-  <h1> davidcai.me Index </h1>
+  <p> davidcai.me Index </p>
 
   </body>
 </html>
