--- a/home.html
+++ b/home.html
@@ -1,95 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
     <meta charset="utf-8">
     <title>David Cai</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="home.css">
-  </head>
+    </head>
 
-  <body>
-  	<div class="container">
-	  	<div class="header">
-	  		<h1> David Cai </h1>
-	  	</div>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h1>David Cai</h1>
+                </div>
+            </div>
 
-	  	<div class="grid">
-
-		  	<a class="block-link" href="rice.html">
-		  		<div class="rice-box">
-			  		<h3 class="hover-underline">Rice University</h3>
-			  		<br>
-			  		B.S. in CS, 2019
-		  		</div>
-		  	</a>
-
-		  	<a class="block-link" href="evernote.html">
-			  	<div class="evernote-box">
-			  		<h3 class="hover-underline">Evernote</h3>
-			  		<br>
-			  		SWE Intern, 
-			  		<br>
-			  		Summer 2017,
-			  		<br>
-			  		Growth Experiments Team
-			  	</div>	  	
-		  	</a>
-
-		  	<a class="block-link" href="https://www.strava.com/athletes/7786466/training/log?feature=public-training-log">
-			  	<div class="runner-box">
-			  		<h3 class="hover-underline">Runner</h3>
-			  		<br>
-			  		Marathons and halves
-			  	</div>	  	
-		  	</a>
-
-		  	<a class="block-link" href="https://www.github.com/caiismyname">
-			  	<div class="coder-box">
-			  		<h3 class="hover-underline">Coder</h3>
-			  		<br>
-			  		Five hackathons and counting
-			  	</div>
-		  	</a>
-
-		  	<a class="block-link" href="http://sharedli.st/caiismyname">
-			  	<div class="reader-box">
-			  		<h3 class="hover-underline">Reader</h3>
-			  		<br>
-			  		Too many tech blogs to count
-			  	</div>	  	
-		  	</a>
-
-			<div class="grid-box">
-				<h3>Contact</h3>
-				<br>
-				<a href="mailto:davidcai2012@gmail.com"><u>Email</u></a> 
-				<br>
-				<a href="https://www.linkedin.com/in/david-cai-264468109/"><u>LinkedIn</u></a>
-			</div>
-
-			<div class="grid-box">
-				<h3>Links</h3>
-				<br>
-				<a href="./David_Cai_Resume.pdf"><u>Resume</u></a>
-				<br>
-				<a href="https://www.github.com/caiismyname"><u>Github</u></a>
-				<br>
-				<a href="https://devpost.com/caiismyname?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><u>Devpost</u></a>
-				<br>
-				<a href="https://www.strava.com/athletes/7786466/training/log?feature=public-training-log"><u>Strava</u></a>
-				<br>
-				<a href="https://www.evernote.com/l/AQA0BEctqHlNhbPplmLmpSE9nvPKih-pi3A"><u>Training Plan</u></a>
-
-			</div>
-		</div>
-
-		<div class="footer">
-		Made from scratch with HTML/CSS. Last updated August 2017.
-		</div>
-
-  	</div>
-
-
-  </body>
+            <div class="row">
+                <div class="col">
+                    <p>
+                        Hi, I'm David Cai, an incoming <a href="https://oathapms.com">APM at Oath</a>. Before that, I studied computer science at Rice University, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on Strava.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 link-list">
+                    <div class="list-group list-group-flush">
+                        <a href="rice.html" class="list-group-item list-group-item-action">Rice</a>
+                        <a href="work.html" class="list-group-item list-group-item-action">Work</a>
+                        <a href="david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
+                        <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action">Github</a>
+                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action">Running</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
 
 
