rice page updated

--- a/rice.html
+++ b/rice.html
@@ -1,64 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>David Cai - Rice University</title>
-    <link rel="stylesheet" href="rice.css">
-  </head>
-  <body>
+		<head>
+				<meta charset="utf-8">
+				<title>David Cai - Education</title>
+				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+				integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+				<link rel="stylesheet" href="style.css">
+		</head>
+		<body>
+				<div class="container">
+						<div class="row">
+                <div class="col-6">
+                    <h1><a href="home.html">David Cai</a><br> Rice University</h1>
+                </div>
+						</div>
+					
+						<hr>
+						
+						<div class="row">
+								<div class="col">
+										<h2>MCS, 2019</h2><br>
+												<ul>
+													<li>533 Introduction to Database Systems</li>
+													<li>530 Database System Implementation</li>
+													<li>557 Artificial Intelligence</li>
+													<li>540 Statistical Machine Learning</li>
+													<li>590 Senior Design (Fall 2018 - Dateline 2.0)</li>
+													<li>539 Senior Design (Spring 2019 - Relocatr)</li>
+													<li>541 Computer Security</li>
+													<li>556 Computer Networks</li>
+												</ul>
+								</div>
+						</div>
 
-  <div class="container">
-  
-  	<div class="header">
-  		<h1><a href="home.html">David Cai:</a> Education</h1>
-  		<p>Rice University | B.S. in Computer Science, 2019  |  GPA: 3.87</p>
-  	</div>
+						<hr>
 
-    <div>
-  		<h3>Relevant Coursework</h3>
-        <div class="info-paragraph">
-          <p style="font-weight: bold;"> Junior Year (In progress)</p>
-      		<ul>
-            <li>Advanced Object Oriented Design</li>
-            <li>Data Science, Tools and Models</li>
-            <li>Compiler Construction</li>
-            <li>Introduction to Computer Networks</li>
-           </ul>
-           <p style="font-weight: bold;"> Sophomore Year</p>
-           <ul> 
-      			<li>Introduction to Computer Systems</li>
-      			<li>Principles of Parallel Programming</li> 
-      			<li>Introduction to Program Design</li> 
-          </ul>
-          <p style="font-weight: bold;"> Freshman Year</p>
-          <ul>
-      			<li>Introduction to Computer Engineering</li> 
-      			<li>Algorithmic Thinking</li> 
-      			<li>Introduction to Engineering Design</li>
-      		</ul>
-        </div>
+						<div class="row">
+								<div class="col">
+										<h2>BA, 2019</h2><br>
+											<ul>
+													<li>182 Algorithms I</li>
+													<li><strong>215 Program Design</strong></li>
+													<li><strong>321 Computer Systems</strong></li>
+													<li>322 Parallel Programming</li>
+													<li>310 Object Oriented Programming</li>
+													<li>330 Tools and Models of Data Science</li>
+													<li><strong>412 Compiler Construction</strong></li>
+													<li>421 Operating Systems</li>
+													<li>447 Computer Vision</li>
+													<li>382 Algorithms II</li>
+											</ul>
+											<strong>Teaching Assistant for bolded classes</strong>
+								</div>
+						</div>
 
-  		<h3>Work Experience</h3>
-  		<ul>
-  			<li>Rice IT Helpdesk, Lead Student Computing Consultant</li>
-  			<li><a href="http://doerr.rice.edu">Doerr Institute for New Leaders, Web Developer</a></li>
-  			<li>Intro. to Program Design, Teaching Assistant (Fall 2017)</li>
-  			<li><a href="https://github.com/caiismyname/WRC-Website">Will Rice College, Webmaster</a></li>
-        <li>Will Rice College, Associate Justice</li>
-  			<li>Will Rice College, Bike Team Captain</li>
-  		</ul>
-
-  		<h3>For Rice Alums</h3>
-  		<ul>
-  			<li>College: Will Rice</li>
-  			<li>Baker 13: No</li>
-  			<li>Wrong way through Sallyport: 0 times</li>
-  			<li>WRWS</li>
-  		</ul>
-    </div>
-  </div>
-
-  </body>
+				</div>
+		</body>
 </html>
 
 
