--- a/home.html
+++ b/home.html
@@ -19,18 +19,19 @@
             <div class="row">
                 <div class="col">
                     <p>
-                        Hi, I'm David Cai, an incoming <a href="https://oathapms.com">APM at Oath</a>. Before that, I studied computer science at Rice University, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on Strava.
+                        Hi, I'm David, an incoming <a href="https://oathapms.com" style="text-decoration: underline">APM at Oath</a>. Before that, I studied computer science at Rice University, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on Strava.
                     </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 link-list">
+                <div class="col-md-6 indent">
                     <div class="list-group list-group-flush">
                         <a href="rice.html" class="list-group-item list-group-item-action">Rice</a>
                         <a href="work.html" class="list-group-item list-group-item-action">Work</a>
                         <a href="david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
                         <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action">Github</a>
-                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action">Running</a>
+                        <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action">Linkedin</a>                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action">Running</a>
+                        <a href="mailto:davidcai2012@gmail.com" class="list-group-item list-group-item-action">davidcai2012@gmail.com</a>
                     </div>
                 </div>
             </div>
