--- a/rice.html
+++ b/rice.html
@@ -11,7 +11,7 @@
 				<div class="container">
 						<div class="row">
                 <div class="col-6">
-                    <h1><a href="home.html">David Cai</a><br> Rice University</h1>
+                    <h1><a href="home.html">David Cai</a><br> <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a></h1>
                 </div>
 						</div>
 					
