--- a/home.html
+++ b/home.html
@@ -15,6 +15,8 @@
                     <h1>David Cai</h1>
                 </div>
             </div>
+            
+            <hr>
 
             <div class="row">
                 <div class="col">
@@ -33,6 +35,9 @@
                         <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action">Linkedin</a>                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action">Running</a>
                         <a href="mailto:davidcai2012@gmail.com" class="list-group-item list-group-item-action">davidcai2012@gmail.com</a>
                     </div>
+                </div>
+                <div class="col-md-6" style="text-align: center;">
+                    <img src="david-cai-self-portrait.jpg" style="max-height: 375px; border: 1px solid black">
                 </div>
             </div>
         </div>
