--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col">
                     <h1>David Cai</h1>
                 </div>
             </div>
