--- a/rice.html
+++ b/rice.html
@@ -10,7 +10,7 @@
 		<body>
 				<div class="container">
 						<div class="row">
-                <div class="col-6">
+                <div class="col">
                     <h1><a href="home.html">David Cai</a><br> <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a></h1>
                 </div>
 						</div>
