--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-9">
+                <div class="col">
                     <h1><a href="home.html">David Cai</a><br> Work Experience</h1>
                 </div>
             </div>
