--- a/rice.html
+++ b/rice.html
@@ -19,7 +19,7 @@
 						
 						<div class="row">
 								<div class="col">
-										<h2>MCS, 2019</h2><br>
+										<h2>Master of Computer Science (MCS), 2019</h2><br>
 												<ul>
 													<li>533 Introduction to Database Systems</li>
 													<li>530 Database System Implementation</li>
@@ -37,7 +37,7 @@
 
 						<div class="row">
 								<div class="col">
-										<h2>BA, 2019</h2><br>
+										<h2>Bachelor of Arts (BA), 2019</h2><br>
 											<ul>
 													<li>182 Algorithms I</li>
 													<li><strong>215 Program Design</strong></li>
