--- a/rice.html
+++ b/rice.html
@@ -37,7 +37,7 @@
 
 						<div class="row">
 								<div class="col">
-										<h2>Bachelor of Arts (BA), 2019</h2><br>
+										<h2>Bachelor of Arts, Computer Science, 2019</h2><br>
 											<ul>
 													<li>182 Algorithms I</li>
 													<li><strong>215 Program Design</strong></li>
