--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col">
                     <p>
-                        Hi, I'm David, an incoming <a href="https://oathapms.com" style="text-decoration: underline">APM at Oath</a>. Before that, I studied computer science at Rice University, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on Strava.
+                        Hi, I'm David, an incoming <a href="https://oathapms.com" style="text-decoration: underline">APM at Oath</a>. Before that, I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a>, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on Strava.
                     </p>
                 </div>
             </div>
