--- a/rice.html
+++ b/rice.html
@@ -1,61 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-		<head>
-				<meta charset="utf-8">
-				<title>David Cai - Education</title>
-				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-				integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-				<link rel="stylesheet" href="style.css">
-		</head>
-		<body>
-				<div class="container">
-						<div class="row">
-                <div class="col">
-                    <h1><a href="home.html">David Cai</a><br> <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a></h1>
-                </div>
-						</div>
-					
-						<hr>
-						
-						<div class="row">
-								<div class="col">
-										<h2>Master of Computer Science (MCS), 2019</h2><br>
-												<ul>
-													<li>533 Introduction to Database Systems</li>
-													<li>530 Database System Implementation</li>
-													<li>557 Artificial Intelligence</li>
-													<li>540 Statistical Machine Learning</li>
-													<li>590 Senior Design (Fall 2018 - Dateline 2.0)</li>
-													<li>539 Senior Design (Spring 2019 - Relocatr)</li>
-													<li>541 Computer Security</li>
-													<li>556 Computer Networks</li>
-												</ul>
-								</div>
-						</div>
+	<head>
 
-						<hr>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115029309-2"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-115029309-2');
+		</script>
 
-						<div class="row">
-								<div class="col">
-										<h2>Bachelor of Arts, Computer Science, 2019</h2><br>
-											<ul>
-													<li>182 Algorithms I</li>
-													<li><strong>215 Program Design</strong></li>
-													<li><strong>321 Computer Systems</strong></li>
-													<li>322 Parallel Programming</li>
-													<li>310 Object Oriented Programming</li>
-													<li>330 Tools and Models of Data Science</li>
-													<li><strong>412 Compiler Construction</strong></li>
-													<li>421 Operating Systems</li>
-													<li>447 Computer Vision</li>
-													<li>382 Algorithms II</li>
-											</ul>
-											<strong>Teaching Assistant for bolded classes</strong>
-								</div>
-						</div>
-
+		<meta charset="utf-8">
+		<title>David Cai - Education</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+		integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	
+	<body>
+		<div class="container">
+			<div class="row">
+		<div class="col">
+			<h1><a href="home.html">David Cai</a><br> <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a></h1>
+		</div>
+			</div>
+		
+			<hr>
+			
+			<div class="row">
+				<div class="col">
+					<h2>Master of Computer Science (MCS), 2019</h2><br>
+						<ul>
+							<li>533 Introduction to Database Systems</li>
+							<li>530 Database System Implementation</li>
+							<li>557 Artificial Intelligence</li>
+							<li>540 Statistical Machine Learning</li>
+							<li>590 Senior Design (Fall 2018 - Dateline 2.0)</li>
+							<li>539 Senior Design (Spring 2019 - Relocatr)</li>
+							<li>541 Computer Security</li>
+							<li>556 Computer Networks</li>
+						</ul>
 				</div>
-		</body>
+			</div>
+
+			<hr>
+
+			<div class="row">
+				<div class="col">
+					<h2>Bachelor of Arts, Computer Science, 2019</h2><br>
+						<ul>
+							<li>182 Algorithms I</li>
+							<li><strong>215 Program Design</strong></li>
+							<li><strong>321 Computer Systems</strong></li>
+							<li>322 Parallel Programming</li>
+							<li>310 Object Oriented Programming</li>
+							<li>330 Tools and Models of Data Science</li>
+							<li><strong>412 Compiler Construction</strong></li>
+							<li>421 Operating Systems</li>
+							<li>447 Computer Vision</li>
+							<li>382 Algorithms II</li>
+						</ul>
+						<strong>Teaching Assistant for bolded classes</strong>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
 
 
