--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                         <a href="david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
                         <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action">Github</a>
                         <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action">Linkedin</a>                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action">Running</a>
-                        <a href="mailto:davidcai2012@gmail.com" class="list-group-item list-group-item-action">davidcai2012@gmail.com</a>
+                        <a href="mailto:caiismyname2012@gmail.com" class="list-group-item list-group-item-action">caiismyname2012@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-md-6" style="text-align: center;">
