blog engine and first post added

--- a/home.html
+++ b/home.html
@@ -41,6 +41,7 @@
                         <a href="rice.html" class="list-group-item list-group-item-action">Rice</a>
                         <a href="work.html" class="list-group-item list-group-item-action">Work</a>
                         <a href="david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
+                        <a href="blog.html" class="list-group-item list-group-item-action">Writing</a>
                         <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action">Github</a>
                         <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action">Linkedin</a>                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action">Running</a>
                         <a href="mailto:caiismyname2012@gmail.com" class="list-group-item list-group-item-action">caiismyname2012@gmail.com</a>
