added logos to homepage entries

--- a/home.html
+++ b/home.html
@@ -40,15 +40,16 @@
                     <div class="list-group list-group-flush">
                         <a href="rice.html" class="list-group-item list-group-item-action">Rice</a>
                         <a href="work.html" class="list-group-item list-group-item-action">Work</a>
-                        <a href="david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
+                        <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
                         <a href="blog.html" class="list-group-item list-group-item-action">Writing</a>
-                        <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action">Github</a>
-                        <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action">Linkedin</a>                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action">Running</a>
-                        <a href="mailto:caiismyname2012@gmail.com" class="list-group-item list-group-item-action">caiismyname2012@gmail.com</a>
+                        <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action"><img width=25px src="/resources/github-logo.png"> Github</a>
+                        <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action"><img width=25px src="/resources/linkedin-logo.png"> Linkedin</a>
+                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action"><img width=25px src="/resources/strava-logo.png"> Running</a>
+                        <a href="mailto:caiismyname2012@gmail.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/gmail-logo.png"> caiismyname2012@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-md-6" style="text-align: center;">
-                    <img src="david-cai-self-portrait.jpg" style="max-height: 375px; border: 1px solid black">
+                    <img src="/resources/david-cai-self-portrait.jpg" style="max-height: 375px; border: 1px solid black">
                 </div>
             </div>
         </div>
