minor updates to homepage info

--- a/home.html
+++ b/home.html
@@ -31,14 +31,14 @@
             <div class="row">
                 <div class="col">
                     <p>
-                        Hi, I'm David, a first year <a href="https://yahooapms.com" style="text-decoration: underline">APM at Yahoo (Verizon Media)</a>. Before that, I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a>, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on Strava.
+                        Hi, I'm David, a second year <a href="https://yahooapms.com" style="text-decoration: underline">APM at Yahoo (Verizon Media)</a>. Before that, I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a>, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on <a href="https://www.strava.com/athletes/7786466">Strava</a>.
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 indent">
                     <div class="list-group list-group-flush">
-                        <a href="blog.html" class="list-group-item list-group-item-action">Writing</a>
+                        <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action">Writing</a>
                         <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
                         <a href="work.html" class="list-group-item list-group-item-action">Work</a>
                         <a href="rice.html" class="list-group-item list-group-item-action">Rice</a>
