--- a/home.html
+++ b/home.html
@@ -38,12 +38,11 @@
             <div class="row">
                 <div class="col-md-6 indent">
                     <div class="list-group list-group-flush">
-                        <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action">Writing</a>
-                        <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action">Resume</a>
-                        <a href="work.html" class="list-group-item list-group-item-action">Work</a>
-                        <a href="rice.html" class="list-group-item list-group-item-action">Rice</a>
+                        <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/pmtl-logo.png"> Writing</a>
+                        <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action"><img width=25px src="/resources/resume-logo.png"> Resume</a>
+                        <a href="rice.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/rice-logo.png"> Rice</a>
                         <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action"><img width=25px src="/resources/github-logo.png"> Github</a>
-                        <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action"><img width=25px src="/resources/linkedin-logo.png"> Linkedin</a>
+                        <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action"><img width=25px src="/resources/linkedin-logo.png"> LinkedIn</a>
                         <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action"><img width=25px src="/resources/strava-logo.png"> Running</a>
                         <a href="mailto:caiismyname2012@gmail.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/gmail-logo.png"> caiismyname2012@gmail.com</a>
                     </div>
