updated intro blurb

--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col">
                     <p>
-                        Hi, I'm David, a second year <a href="https://yahooapms.com" style="text-decoration: underline">APM at Yahoo (Verizon Media)</a>. Before that, I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a>, where I graduated with a BA and an MCS in 2019. During that time, I had internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on <a href="https://www.strava.com/athletes/7786466">Strava</a>.
+                        Hi, I'm David, a Product Manager (former <a href="https://yahooapms.com" style="text-decoration: underline">APM</a>) at Yahoo News, owning the <a href="https://apps.apple.com/us/app/yahoo-news-breaking-local/id304158842" style="text-decoration: underline">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.yahoo.mobile.client.android.yahoo" style="text-decoration: underline">Android</a> mobile apps. Before that, I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a>, where I graduated with a BA and an MCS in 2019. During that time, I had software engineering internships with Evernote and Facebook. Outside of work, I love running, and you can follow my training on <a href="https://www.strava.com/athletes/7786466">Strava</a>.
                     </p>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     <div class="list-group list-group-flush">
                         <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/pmtl-logo.png"> Writing</a>
                         <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action"><img width=25px src="/resources/resume-logo.png"> Resume</a>
-                        <a href="rice.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/rice-logo.png"> Rice</a>
+                        <a href="rice.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/rice-logo.png"> Education</a>
                         <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action"><img width=25px src="/resources/github-logo.png"> Github</a>
                         <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action"><img width=25px src="/resources/linkedin-logo.png"> LinkedIn</a>
                         <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action"><img width=25px src="/resources/strava-logo.png"> Running</a>
