--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; URL='http://davidcai.me/home.html'" />
-    <title>David Cai</title>
-  </head>
+    <head>
 
-  <body>
-  <p> davidcai.me Index </p>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115029309-2"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-115029309-2');
+        </script>
 
-  </body>
+        <meta charset="utf-8">
+        <title>David Cai</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+        integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>David Cai</h1>
+                </div>
+            </div>
+            
+            <hr>
+
+            <div class="row">
+                <div class="col">
+                    <p>
+                        Hi, I'm David, a Product Manager at <a href="https://www.charthop.com" style="text-decoration: underline"></a>ChartHop</a>. Previously, I was an <a href="https://yahooapms.com" style="text-decoration: underline">APM</a> at Yahoo News, owning the <a href="https://apps.apple.com/us/app/yahoo-news-breaking-local/id304158842" style="text-decoration: underline">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.yahoo.mobile.client.android.yahoo" style="text-decoration: underline">Android</a> mobile apps. You can find my writing about APM programs and product management at <a href="https://pmtechlessons.com" style="text-decoration: underline">PMTechLessons</a>.
+                        <br>
+                        <br>
+                        I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name" style="text-decoration: underline">Rice University</a>, where I graduated with a BA and an MCS in 2019. Outside of work, I'm usually training for a marathon, and you can follow my training on <a href="https://www.strava.com/athletes/7786466" style="text-decoration: underline">Strava</a>.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 indent">
+                    <div class="list-group list-group-flush">
+                        <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/pmtl-logo.png"> Writing</a>
+                        <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action"><img width=25px src="/resources/resume-logo.png"> Resume</a>
+                        <a href="rice.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/rice-logo.png"> Education</a>
+                        <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action"><img width=25px src="/resources/github-logo.png"> Github</a>
+                        <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action"><img width=25px src="/resources/linkedin-logo.png"> LinkedIn</a>
+                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action"><img width=25px src="/resources/strava-logo.png"> Running</a>
+                        <a href="mailto:caiismyname2012@gmail.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/gmail-logo.png"> caiismyname2012@gmail.com</a>
+                    </div>
+                </div>
+                <div class="col-md-6" style="text-align: center;">
+                    <img src="/resources/david-cai-self-portrait.jpg" style="max-height: 375px; border: 1px solid black">
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
 
 
