--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="row">
                 <div class="col-md-6 indent">
                     <div class="list-group list-group-flush">
+                        <a href="apps.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/romp-icon.png"> Apps</a>
                         <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/pmtl-logo.png"> Writing</a>
                         <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action"><img width=25px src="/resources/resume-logo.png"> Resume</a>
                         <a href="rice.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/rice-logo.png"> Education</a>
