Fixed the logo path

--- a/apps.html
+++ b/apps.html
@@ -33,7 +33,7 @@
 						<h3>Clok — Time Utilities</h3>
 						A stopwatch and repeat-timer app custom built for my workout needs. <br>
 						<a href="https://apps.apple.com/us/app/clok-a-better-clock-app/id1632774049">[App store link]</a><br>
-						<img width=100px src="/resources/clok-logo.png">
+						<img width=200px src="/resources/clok-icon.png">
 
 						<br>
 						<br>
@@ -41,7 +41,7 @@
 						<h3>Romp — Shared Vlogs (beta)</h3>
 						Record vlogs together with friends. <br>
 						<a href="https://testflight.apple.com/join/Q276C1fR">[Testflight link]</a><br>
-						<img width=100px src="/resources/romp-logo.png">
+						<img width=200px src="/resources/romp-icon.png">
 				</div>
 			</div>
 		</div>
