fixed home backlink

--- a/apps.html
+++ b/apps.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h1><a href="home.html">David Cai</a><br> Apps</h1>
+					<h1><a href="index.html">David Cai</a><br> Apps</h1>
 				</div>
 			</div>
 		
