--- a/rice.html
+++ b/rice.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h1><a href="home.html">David Cai</a><br> <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a></h1>
+					<h1><a href="index.html">David Cai</a><br> <a href="https://github.com/caiismyname/Average-Rice-Name">Rice University</a></h1>
 				</div>
 			</div>
 		
