--- a/apps.html
+++ b/apps.html
@@ -30,7 +30,15 @@
 			
 			<div class="row">
 				<div class="col">
-						<h3>Clok — Time Utilities</h3>
+						<h3>Splitz</h3>
+						Running workout parser to auto-write splits, averages, and sets on Strava.<br>
+						<a href="https://workoutsplitz.com">Website</a><br>
+						<img width=200px src="/resources/split-logo.png">
+
+						<br>
+						<br>
+
+						<h3>[archived] Clok — Time Utilities</h3>
 						A stopwatch and repeat-timer app custom built for my workout needs. <br>
 						<a href="https://apps.apple.com/us/app/clok-a-better-clock-app/id1632774049">[App store link]</a><br>
 						<img width=200px src="/resources/clok-icon.png">
@@ -38,7 +46,7 @@
 						<br>
 						<br>
 
-						<h3>Romp — Shared Vlogs (beta)</h3>
+						<h3>[archived] Romp — Shared Vlogs</h3>
 						Record vlogs together with friends. <br>
 						<a href="https://testflight.apple.com/join/Q276C1fR">[Testflight link]</a><br>
 						<img width=200px src="/resources/romp-icon.png">
