--- a/index.html
+++ b/index.html
@@ -31,23 +31,29 @@
             <div class="row">
                 <div class="col">
                     <p>
-                        Hi, I'm David, a Product Manager at <a href="https://www.charthop.com" style="text-decoration: underline"></a>ChartHop</a>. Previously, I was an <a href="https://yahooapms.com" style="text-decoration: underline">APM</a> at Yahoo News, owning the <a href="https://apps.apple.com/us/app/yahoo-news-breaking-local/id304158842" style="text-decoration: underline">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.yahoo.mobile.client.android.yahoo" style="text-decoration: underline">Android</a> mobile apps. You can find my writing about APM programs and product management at <a href="https://pmtechlessons.com" style="text-decoration: underline">PMTechLessons</a>.
+                        Hi, I'm David, a Product Manager at <a href="https://www.charthop.com" style="text-decoration: underline"></a>ChartHop</a>. Previously, I was an <a href="https://yahooapms.com" style="text-decoration: underline">APM</a> at Yahoo News, owning the <a href="https://apps.apple.com/us/app/yahoo-news-breaking-local/id304158842" style="text-decoration: underline">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.yahoo.mobile.client.android.yahoo" style="text-decoration: underline">Android</a> mobile apps.
                         <br>
                         <br>
-                        I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name" style="text-decoration: underline">Rice University</a>, where I graduated with a BA and an MCS in 2019. Outside of work, I'm usually training for a marathon, and you can follow my training on <a href="https://www.strava.com/athletes/7786466" style="text-decoration: underline">Strava</a>.
+                        I studied computer science at <a href="https://github.com/caiismyname/Average-Rice-Name" style="text-decoration: underline">Rice University</a>, where I graduated with a BA and an MCS in 2019. Outside of work, I'm usually <a href="/coaching.html">training for a marathon</a>, and you can follow my training on <a href="https://www.strava.com/athletes/7786466" style="text-decoration: underline">Strava</a>.
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 indent">
                     <div class="list-group list-group-flush">
-                        <a href="apps.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/romp-icon.png"> Apps</a>
-                        <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/pmtl-logo.png"> Writing</a>
                         <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action"><img width=25px src="/resources/resume-logo.png"> Resume</a>
+                        <a href="apps.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/romp-icon.png"> Personal App Portfolio</a>
                         <a href="rice.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/rice-logo.png"> Education</a>
-                        <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action"><img width=25px src="/resources/github-logo.png"> Github</a>
+                        <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/pmtl-logo.png"> Writing</a>
+                        <a href="/coaching.html" class="list-group-item list-group-item-action"> Running Coaching</a>
+                    </div>
+                    <br>
+                    <br>
+                    <br>
+                    <div class="list-group list-group-flush">
                         <a href="https://www.linkedin.com/in/david-cai-264468109" class="list-group-item list-group-item-action"><img width=25px src="/resources/linkedin-logo.png"> LinkedIn</a>
-                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action"><img width=25px src="/resources/strava-logo.png"> Running</a>
+                        <a href="https://github.com/caiismyname" class="list-group-item list-group-item-action"><img width=25px src="/resources/github-logo.png"> Github</a>
+                        <a href="https://www.strava.com/athletes/7786466" class="list-group-item list-group-item-action"><img width=25px src="/resources/strava-logo.png"> Strava</a>
                         <a href="mailto:caiismyname2012@gmail.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/gmail-logo.png"> caiismyname2012@gmail.com</a>
                     </div>
                 </div>
