vertical photo for the coaching site

--- a/coaching.html
+++ b/coaching.html
@@ -36,8 +36,14 @@
 					<h2>Running Coaching Services</h2><br>
 					<p>
 						David has been racing marathons for 7 years, with a personal record of 2:31 at the <a href="https://results.baa.org/2023/?content=detail&fpid=search&pid=search&idp=9TGHS6FF17DB78&lang=EN_CAP&event=R&event_main_group=runner&pidp=start&search%5Bname%5D=cai&search_event=R">2023 Boston Marathon</a>. His training expertise focuses on beginner to intermediate runners who also have a life outside of running.
-					</p>	
-					<br>
+					</p>
+				</div>
+			</div>
+			
+			<br>
+			
+			<div class="row">
+				<div class="col-8">
 					<p>
 						Coaching services include:
 					</p>
@@ -65,7 +71,12 @@
 					</p>
 					<br>
 				</div>
+
+				<div class="col-4">
+					<img src="/resources/running-portrait.jpg">
+				</div>
 			</div>
+					
 			<div class="row">
 				<div class="col">					
 					<stripe-buy-button
@@ -89,12 +100,7 @@
 					</stripe-buy-button>
 				</div>
 			</div>
-
-			<div class="row">
-				<div class="col">
-					<img src="/resources/running-portrait.jpg">
-				</div>
-			</div>
+			<br>
 		</div>
 	</body>
 </html>
