splitz was misspelled

--- a/apps.html
+++ b/apps.html
@@ -33,7 +33,7 @@
 						<h3>Splitz</h3>
 						Running workout parser to auto-write splits, averages, and sets on Strava.<br>
 						<a href="https://workoutsplitz.com">Website</a><br>
-						<img width=200px src="/resources/split-logo.png">
+						<img width=200px src="/resources/splitz-logo.png">
 
 						<br>
 						<br>
