--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-md-6 indent">
                     <div class="list-group list-group-flush">
                         <a href="/resources/david-cai-resume.pdf" class="list-group-item list-group-item-action"><img width=25px src="/resources/resume-logo.png"> Resume</a>
-                        <a href="apps.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/romp-icon.png"> Personal App Portfolio</a>
+                        <a href="apps.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/splitz-logo.png"> Personal App Portfolio</a>
                         <a href="rice.html" class="list-group-item list-group-item-action"><img width=25px src="/resources/rice-logo.png"> Education</a>
                         <a href="https://www.pmtechlessons.com" class="list-group-item list-group-item-action"><img width=25px src="/resources/pmtl-logo.png"> Writing</a>
                         <a href="/coaching.html" class="list-group-item list-group-item-action"> Running Coaching</a>
