--- a/coaching.html
+++ b/coaching.html
@@ -33,17 +33,27 @@
 			
 			<div class="row">
 				<div class="col">
-					<h2>Running Coaching Services</h2><br>
+					<h2>Running Coaching Services</h2>
+				</div>
+			</div>
+
+			<br>
+
+			<div class="row">
+				<div class="col">
 					<p>
 						David has been racing marathons for 7 years, with a personal record of 2:31 at the <a href="https://results.baa.org/2023/?content=detail&fpid=search&pid=search&idp=9TGHS6FF17DB78&lang=EN_CAP&event=R&event_main_group=runner&pidp=start&search%5Bname%5D=cai&search_event=R">2023 Boston Marathon</a>. His training expertise focuses on beginner to intermediate runners who also have a life outside of running.
 					</p>
+				</div>
+				<div class="col">
+					<img src="/resources/running-portrait.jpg">
 				</div>
 			</div>
 			
 			<br>
 			
 			<div class="row">
-				<div class="col-8">
+				<div class="col">
 					<p>
 						Coaching services include:
 					</p>
@@ -65,19 +75,16 @@
 						<li>Trying to qualify for the <a href="https://www.baa.org/races/boston-marathon/qualify">Boston Marathon</a> or <a href="https://www.nyrr.org/tcsnycmarathon/runners/marathon-time-qualifiers">New York City Marathon</a></li>
 						<li>Work a full time job, have friends, or just generally have a life and can't dedicate obscene hours each week to running but still want to set PRs (yes, it's possible!)</li>
 					</ul>
-					<br>
-					<p>
-						If you're reading this page right now, it means I'm still developing my skills as a coach and am offering coaching services at no charge. That being said, I've included donation options below if you find my services useful and are in a position to donate. 
-					</p>
-					<br>
-				</div>
-
-				<div class="col-4">
-					<img src="/resources/running-portrait.jpg">
 				</div>
 			</div>
-					
+
+			<br>
+			<br>
+			
 			<div class="row">
+				<p>
+					If you're reading this page right now, it means I'm still developing my skills as a coach and am offering coaching services at no charge. That being said, I've included donation options below if you find my services useful and are in a position to donate. 
+				</p>
 				<div class="col">					
 					<stripe-buy-button
 						buy-button-id="buy_btn_1No7mNK0AQtnORqn4bm0sWsQ"
