--- a/coaching.html
+++ b/coaching.html
@@ -45,9 +45,6 @@
 						David has been racing marathons for 7 years, with a personal record of 2:31 at the <a href="https://results.baa.org/2023/?content=detail&fpid=search&pid=search&idp=9TGHS6FF17DB78&lang=EN_CAP&event=R&event_main_group=runner&pidp=start&search%5Bname%5D=cai&search_event=R">2023 Boston Marathon</a>. His training expertise focuses on beginner to intermediate runners who also have a life outside of running.
 					</p>
 				</div>
-				<div class="col">
-					<img src="/resources/running-portrait.jpg">
-				</div>
 			</div>
 			
 			<br>
@@ -85,21 +82,21 @@
 				<p>
 					If you're reading this page right now, it means I'm still developing my skills as a coach and am offering coaching services at no charge. That being said, I've included donation options below if you find my services useful and are in a position to donate. 
 				</p>
-				<div class="col">					
+				<div class="col-md">					
 					<stripe-buy-button
 						buy-button-id="buy_btn_1No7mNK0AQtnORqn4bm0sWsQ"
 						publishable-key="pk_live_51NYzE1K0AQtnORqnHWbv6FnpnWzYh0rBDeaHNs3xa2ExcfbGMIiZYmb7qE11cl7zrsmV4I2S4T5l48WlngkmFKHV00M3QQiFrB"
 					>
 					</stripe-buy-button>	
 				</div>
-				<div class="col">
+				<div class="col-md">
 				  <stripe-buy-button
 					buy-button-id="buy_btn_1No7t6K0AQtnORqnSO8XnW1P"
 					publishable-key="pk_live_51NYzE1K0AQtnORqnHWbv6FnpnWzYh0rBDeaHNs3xa2ExcfbGMIiZYmb7qE11cl7zrsmV4I2S4T5l48WlngkmFKHV00M3QQiFrB"
 				>
 				</stripe-buy-button>
 				</div>
-				<div class="col">					
+				<div class="col-md">					
 					<stripe-buy-button
 						buy-button-id="buy_btn_1No7uFK0AQtnORqnNc3J0jjH"
 						publishable-key="pk_live_51NYzE1K0AQtnORqnHWbv6FnpnWzYh0rBDeaHNs3xa2ExcfbGMIiZYmb7qE11cl7zrsmV4I2S4T5l48WlngkmFKHV00M3QQiFrB"
@@ -108,6 +105,12 @@
 				</div>
 			</div>
 			<br>
+
+			<div class="row">
+				<div class="col mx-auto text-center">
+					<img src="/resources/running-portrait.jpg">
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
