added contact info

--- a/coaching.html
+++ b/coaching.html
@@ -77,11 +77,27 @@
 
 			<br>
 			<br>
+
+			<div class="row">
+				<div class="col">
+					<p>
+						If interested, send an email to caiismyname2012@gmail.com with your name, goal race, and goal time (if you have one).
+					</p>
+				</div>
+			</div>
+
+			<br>
+			<br>
 			
 			<div class="row">
-				<p>
-					If you're reading this page right now, it means I'm still developing my skills as a coach and am offering coaching services at no charge. That being said, I've included donation options below if you find my services useful and are in a position to donate. 
-				</p>
+				<div class="col">
+					<p>
+						If you're reading this page right now, it means I'm still developing my skills as a coach and am offering coaching services at no charge. That being said, I've included donation options below if you find my services useful and are in a position to donate. 
+					</p>	
+				</div>
+			</div>
+
+			<div class="row">
 				<div class="col-md">					
 					<stripe-buy-button
 						buy-button-id="buy_btn_1No7mNK0AQtnORqn4bm0sWsQ"
